# TwitchDropsMiner

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.alpine  Dockerfile.nuitka  FORK_NOTES.md  LICENSE  Portugues.json  README.md  README_webui.md  WEB.md  base_ui.py  build.bat  build.sh  build.spec  cache.py  channel.py  cli.py  constants.py  docker-compose.yml  docker-compose.yml.new  docker-entrypoint.sh  docker-setup.ps1  docker-setup.sh  docker_main.py  entrypoint.py  example_settings.json  exceptions.py  flake.nix  generate_jwt_secret.bat  generate_jwt_secret.py  generate_jwt_secret.sh  gui.py  (+28 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01-virus.yml  web_interface_issue.md
.github/workflows/: Check_patch_notes.yml  Release.yml  ci.yml  docker-build.yml  duplicate-issues.yml  release.yml  update-dependencies.yml  upstream-merge.yml
appimage/: AppImageBuilder.yml
data/: settings.json
lang/: Danish  Dansk.json  Deutsch.json  English.json  Español.json  Français.json  Indonesian.json  Italiano.json  Magyar.json  Nederlandse.json  Norsk.json  Polski.json  Português.json  Română.json  Türkçe.json  Čeština.json  Русский.json  Українська.json  العربية.json  日本語.json  简体中文.json  繁體中文.json
nix/: package.nix
scripts/: clean_app.py  pack_app.py
tests/: conftest.py  test_drop_countdown.py  test_gui.py  test_interface_conformance.py  test_inventory_render.py
web/: app.py  auth.py  index.html
web/templates/: device_login.html  index.html  login.html
webui/: README.md  __init__.py  auth.py  handlers.py  html_utils.py  manager.py  mock_classes.py  patches.py  ssl.py  styles.css  thread_utils.py  utils.py
webui/adapters/: __init__.py  campaign_progress.py  channel_list.py  console_output.py  help_tab.py  inventory_overview.py  tabs.py  (+5 more)
(+52 files in other folders)
