[project]
name = "twitchdropsminer"
dynamic = ["version"]
description = "A program that allows you to mine timed drops on Twitch."
authors = [
    { name = "DevilXD" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "pillow>=12.1.1",
    "pygobject<3.51 ; sys_platform == 'linux'",
    "pystray>=0.19.5",
    "pywin32>=306 ; sys_platform == 'win32'",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "hatchling",
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "version.py"
